fix screen spacing on mobile, re order themes,

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -34,7 +34,7 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    width: 95%;
     text-align: center;
     padding-bottom: 6vh;
 }
