--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -13,7 +13,7 @@
 .header h3 {
     text-transform: uppercase;
     font-weight: 400;
-    letter-spacing: 12px;
+    letter-spacing: 9px;
 }
 .header {
     text-align: center;
